# Python-UV-Project-Template

./: README.md  pyproject.toml
test/: test_func.py
